<package format="2">
  <name>rosbag_filter</name>
  <version>0.0.0</version>
  <description>The rosbag_filter package</description>

  <maintainer email="kaitlin.asch@gmail.com">kaity_asch</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
    <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>

